--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "css-loader": "^2.1.1",
     "node-sass": "^4.12.0",
     "qrcode-generator-es6": "^1.1.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "style-loader": "^0.23.1"
   },
   "scripts": {
     "start": "react-scripts start",
