--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "qr-code-generator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vinceumo.github.io/qr-code-generator",
   "dependencies": {
     "css-loader": "^2.1.1",
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.12.0",
     "qrcode-generator-es6": "^1.1.4",
     "react": "^16.8.6",
@@ -14,6 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
