--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "qrcode-generator-es6": "^1.1.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "style-loader": "^0.23.1"
   },
