--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "css-loader": "^2.1.1",
     "gh-pages": "^2.0.1",
+    "jsqr": "^1.2.0",
     "node-sass": "^4.12.0",
     "qrcode-generator-es6": "^1.1.4",
     "react": "^16.8.6",
